--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/MemTrack.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/memtrack.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -290,7 +290,7 @@
                         <div class="modal-body">
                             <h2>MemTrack</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/MemTrack.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/memtrack.png" class="img-responsive img-centered" alt="">
                             <p>I created a project for FBLA, a highschool compition for highschool students intersted in buiesness. The event I competed in was Desktop Application developmebnt. In Desktop Application Development, each person was assigned a client with a business problem, we then made an application to solve our client's problem and presented it to them. The application I was asked to build was to keep track of members for the FBLA orginasation. I was awarded first place in the West Central Region.</p>
                             </br>
                             <p>Key features of the application include:</p>
