spelling errors and added github link

--- a/index.html
+++ b/index.html
@@ -164,11 +164,11 @@
                 <div class="col-lg-4 col-lg-offset-2">
                     <h4>Technical Specilizations</h4>
                     <ul>
-                        <li>.Net Fraimwork</li>
-                        <li>Cisco: Routeing and Switching</li>
+                        <li>.Net Framework</li>
+                        <li>Cisco: Routing and Switching</li>
                         <li>Windows Server</li>
                         <li>Linux Systems</li>
-                        <li>Wordpress</li>
+                        <li>WordPress</li>
                     </ul>
                 </div>
                 <div class="col-lg-4">
@@ -177,7 +177,7 @@
                         <li>MTA: Software Development Fundamentals</li>
                         <li>2017 1st place FBLA Networking Concepts</li>
                         <li>2016 1st place FBLA Desktop Application Development</li>
-                        <li>2015 1st place FBLA Management Decistion Makeing</li>
+                        <li>2015 1st place FBLA Management Decision Making</li>
                     </ul>
                 </div>
             </div>
@@ -291,18 +291,21 @@
                             <h2>MemTrack</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/memtrack.png" class="img-responsive img-centered" alt="">
-                            <p>I created a project for FBLA, a highschool compition for highschool students intersted in buiesness. The event I competed in was Desktop Application developmebnt. In Desktop Application Development, each person was assigned a client with a business problem, we then made an application to solve our client's problem and presented it to them. The application I was asked to build was to keep track of members for the FBLA orginasation. I was awarded first place in the West Central Region.</p>
+                            <p>I created a project for FBLA, a high school compaction for high school students interested in business. The event I competed in was Desktop Application development. In Desktop Application Development, each person was assigned a client with a business problem, we then made an application to solve our client's problem and presented it to them. The application I was asked to build was to keep track of members for the FBLA organization. I was awarded first place in the West Central Region.</p>
                             </br>
                             <p>Key features of the application include:</p>
                             <ul class="content">
                                 <li>Emailing reports from the app</li>
-                                <li>XML manipulatoion</li>
+                                <li>XML manipulation</li>
                                 <li>Importing and exporting Excel files from the app</li>
                                 <li>Data validation</li>
                             </ul>
                             <ul class="list-inline item-details">
                                 <li>Date:
                                     <strong>2015</a></strong>
+                                </li>
+                                <li>
+                                    <a href="https://github.com/Carefree4/MemTrack" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
