--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <img class="img-responsive" src="img/headshot.gif" alt="">
                     <div class="intro-text">
                         <span class="name">Maxwell Wenger</span>
                         <hr class="star-light">
-                        <span class="skills">Software Development &middot; Buisness Automation &middot; Systems</span>
+                        <span class="skills">Software Development &middot; Buisness Automation &middot; Systems Management</span>
                     </div>
                 </div>
             </div>
