added portfolio tiems

--- a/index.html
+++ b/index.html
@@ -98,9 +98,10 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/cake.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/WoodinvilleFBLA.png" class="img-responsive" alt="">
                     </a>
                 </div>
+                <!--
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -140,7 +141,7 @@
                         </div>
                         <img src="img/portfolio/submarine.png" class="img-responsive" alt="">
                     </a>
-                </div>
+                </div>-->
             </div>
         </div>
     </section>
@@ -293,7 +294,7 @@
                         <div class="modal-body">
                             <h2>MemTrack</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/memtrack.png" class="img-responsive img-centered" alt="">
+                            <a href="https://github.com/Carefree4/MemTrack" target="_blank"><img src="img/portfolio/memtrack.png" class="img-responsive img-centered" alt=""></a>
                             <p>I created a project for FBLA, a high school compaction for high school students interested in business. The event I competed in was Desktop Application development. In Desktop Application Development, each person was assigned a client with a business problem, we then made an application to solve our client's problem and presented it to them. The application I was asked to build was to keep track of members for the FBLA organization. I was awarded first place in the West Central Region.</p>
                             </br>
                             <p>Key features of the application include:</p>
@@ -305,10 +306,7 @@
                             </ul>
                             <ul class="list-inline item-details">
                                 <li>Date:
-                                    <strong>2015</a></strong>
-                                </li>
-                                <li>
-                                    <a href="https://github.com/Carefree4/MemTrack" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
+                                    <strong>2015</strong>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
@@ -332,22 +330,22 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set
-                                by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download
-                                their free set with 16 icons, or you can purchase the entire set with 146 icons for only
-                                $12!</p>
+                            <a href="http://www.eastsideconsulting.net/WoodinvilleFbla/" target="_blank"><img src="img/portfolio/WoodinvilleFBLA.png" class="img-responsive img-centered" alt=""></a>
+                            <p>
+                                Woodinville High School FBLA director reached out to the community to find someone to create a website to promote the FBLA club and entrupunerual spirit at Woodinville High.
+                                <br />This project took less than a week to complete and used content provided by the FBLA club.
+                            </p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                    <strong>Woodinville High School FBLA Club</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong>February 2017</a>
                                     </strong>
                                 </li>
                                 <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                    <strong>Web Development</a>
                                     </strong>
                                 </li>
                             </ul>
