--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                             <hr class="star-primary">
                             <a href="http://www.eastsideconsulting.net/WoodinvilleFbla/" target="_blank"><img src="img/portfolio/WoodinvilleFBLA.png" class="img-responsive img-centered" alt=""></a>
                             <p>
-                                Woodinville High School FBLA director reached out to the community to find someone to create a website to promote the FBLA club and entrupunerual spirit at Woodinville High.
+                                Woodinville High School FBLA director reached out to the community to find someone to create a website to promote the FBLA club and entrepreneurial spirit at Woodinville High.
                                 <br />This project took less than a week to complete and used content provided by the FBLA club.
                             </p>
                             <ul class="list-inline item-details">
