--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Woodinville High FBLA Club</h2>
                             <hr class="star-primary">
                             <a href="http://www.eastsideconsulting.net/WoodinvilleFbla/" target="_blank"><img src="img/portfolio/WoodinvilleFBLA.png" class="img-responsive img-centered" alt=""></a>
                             <p>
