--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
                     <img class="img-responsive" src="img/headshot.gif" alt="">
                     <div class="intro-text">
                         <span class="name">Maxwell Wenger</span>
-                        <hr class="star-light">
                         <span class="skills">Software Development &middot; Buisness Automation &middot; Systems Management</span>
                     </div>
                 </div>
             </div>
         </div>
+        <small><a href="https://www.google.com/maps/@47.6615063,-122.2073123,3a,75y,308.15h,74.05t/data=!3m6!1e1!3m4!1s5D_Cug-g8puFaMzEFOKyOg!2e0!7i13312!8i6656">Kirkland, WA</a></small>
     </header>
     <!-- Portfolio Grid Section -->
     <section id="portfolio">
