--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         </div>
         <small><a href="https://www.google.com/maps/@47.6615063,-122.2073123,3a,75y,308.15h,74.05t/data=!3m6!1e1!3m4!1s5D_Cug-g8puFaMzEFOKyOg!2e0!7i13312!8i6656">Kirkland, WA</a></small>
     </header>
+
     <!-- Portfolio Grid Section -->
     <section id="portfolio">
         <div class="container">
@@ -154,13 +155,14 @@
                     <hr class="star-light">
                 </div>
             </div>
-            <p>I thrive on working in a position where I am responsible for understanding a client’s needs and leading
-                        a process of identifying and implementing tailored solutions that delight our client and deliver
-                        desired results. I love computer science, but I also love understanding a business’ needs and crafting
-                        a solution for their problems.
-                        </br></br>Qualities that I bring to the teams I participate in include: enjoying working with others, a high level
-                        of accountability, a passion for delivering results, and a growing range of knowledge regarding platforms
-                        and tools for creating software solutions.</p>
+            <p>I thrive on working in a position where I am responsible for understanding a client’s needs and leading a process
+                of identifying and implementing tailored solutions that delight our client and deliver desired results. I
+                love computer science, but I also love understanding a business’ needs and crafting a solution for their
+                problems.
+                </br>
+                </br>Qualities that I bring to the teams I participate in include: enjoying working with others, a high level
+                of accountability, a passion for delivering results, and a growing range of knowledge regarding platforms
+                and tools for creating software solutions.</p>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
                     <h4>Technical Specilizations</h4>
@@ -182,6 +184,56 @@
                     </ul>
                 </div>
             </div>
+            <br />
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="skill-bar">
+                        <div class="progress-lable">
+                            <h6>Application Development</h6>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 93%;">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6">
+                    <div class="skill-bar">
+                        <div class="progress-lable">
+                            <h6>Network Enginering & Systems Management</h6>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6">
+                    <div class="skill-bar">
+                        <div class="progress-lable">
+                            <h6>WordPress & Web Development</h6>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6">
+                    <div class="skill-bar">
+                        <div class="progress-lable">
+                            <h6>Buiesness Automation</h6>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <!-- Contact Section -->
@@ -195,8 +247,6 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-                    <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
                     <form method="POST" action="https://formspree.io/contact@seasharp.net" novalidate>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
@@ -295,7 +345,12 @@
                             <h2>MemTrack</h2>
                             <hr class="star-primary">
                             <a href="https://github.com/Carefree4/MemTrack" target="_blank"><img src="img/portfolio/memtrack.png" class="img-responsive img-centered" alt=""></a>
-                            <p>I created a project for FBLA, a high school compaction for high school students interested in business. The event I competed in was Desktop Application development. In Desktop Application Development, each person was assigned a client with a business problem, we then made an application to solve our client's problem and presented it to them. The application I was asked to build was to keep track of members for the FBLA organization. I was awarded first place in the West Central Region.</p>
+                            <p>I created a project for FBLA, a high school compaction for high school students interested in
+                                business. The event I competed in was Desktop Application development. In Desktop Application
+                                Development, each person was assigned a client with a business problem, we then made an application
+                                to solve our client's problem and presented it to them. The application I was asked to build
+                                was to keep track of members for the FBLA organization. I was awarded first place in the
+                                West Central Region.</p>
                             </br>
                             <p>Key features of the application include:</p>
                             <ul class="content">
@@ -332,8 +387,10 @@
                             <hr class="star-primary">
                             <a href="http://www.eastsideconsulting.net/WoodinvilleFbla/" target="_blank"><img src="img/portfolio/WoodinvilleFBLA.png" class="img-responsive img-centered" alt=""></a>
                             <p>
-                                Woodinville High School FBLA director reached out to the community to find someone to create a website to promote the FBLA club and entrepreneurial spirit at Woodinville High.
-                                <br />This project took less than a week to complete and used content provided by the FBLA club.
+                                Woodinville High School FBLA director reached out to the community to find someone to create a website to promote the FBLA
+                                club and entrepreneurial spirit at Woodinville High.
+                                <br />This project took less than a week to complete and used content provided by the FBLA
+                                club.
                             </p>
                             <ul class="list-inline item-details">
                                 <li>Client:
@@ -374,7 +431,8 @@
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set
                                 by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download
                                 their free set with 16 icons, or you can purchase the entire set with 146 icons for only
-                                $12!</p>
+                                $12!
+                            </p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
@@ -414,7 +472,8 @@
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set
                                 by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download
                                 their free set with 16 icons, or you can purchase the entire set with 146 icons for only
-                                $12!</p>
+                                $12!
+                            </p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
@@ -454,7 +513,8 @@
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set
                                 by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download
                                 their free set with 16 icons, or you can purchase the entire set with 146 icons for only
-                                $12!</p>
+                                $12!
+                            </p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
@@ -494,7 +554,8 @@
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set
                                 by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download
                                 their free set with 16 icons, or you can purchase the entire set with 146 icons for only
-                                $12!</p>
+                                $12!
+                            </p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
@@ -524,7 +585,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <!-- Contact Form JavaScript -->
     <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
     <!-- Theme JavaScript -->
     <script src="js/freelancer.min.js"></script>
 </body>
