link to new tab

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
             </div>
         </div>
-        <small><a href="https://www.google.com/maps/@47.6615063,-122.2073123,3a,75y,308.15h,74.05t/data=!3m6!1e1!3m4!1s5D_Cug-g8puFaMzEFOKyOg!2e0!7i13312!8i6656">Kirkland, WA</a></small>
+        <small><a href="https://www.google.com/maps/@47.6615063,-122.2073123,3a,75y,308.15h,74.05t/data=!3m6!1e1!3m4!1s5D_Cug-g8puFaMzEFOKyOg!2e0!7i13312!8i6656" target="_blank">Kirkland, WA</a></small>
     </header>
 
     <!-- Portfolio Grid Section -->
