added parallax to background image

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <!-- /.container-fluid -->
     </nav>
     <!-- Header -->
-    <header>
+    <header class="parallax">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
