--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 and tools for creating software solutions.</p>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <h4>Technical Specilizations</h4>
+                    <h4>Technical Specializations</h4>
                     <ul>
                         <li>.Net Framework</li>
                         <li>Cisco: Routing and Switching</li>
