--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <img class="img-responsive" src="img/headshot.gif" alt="">
                     <div class="intro-text">
                         <span class="name">Maxwell Wenger</span>
-                        <span class="skills">Software Development &middot; Buisness Automation &middot; Systems Management</span>
+                        <span class="skills">Software Development &middot; Business Automation &middot; Systems Management</span>
                     </div>
                 </div>
             </div>
@@ -189,7 +189,7 @@
                 <div class="col-sm-6">
                     <div class="skill-bar">
                         <div class="progress-lable">
-                            <h6>Application Development</h6>
+                            <h6>APPLICATION DEVELOPMENT</h6>
                         </div>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 93%;">
@@ -201,7 +201,7 @@
                 <div class="col-sm-6">
                     <div class="skill-bar">
                         <div class="progress-lable">
-                            <h6>Network Enginering & Systems Management</h6>
+                            <h6>NETWORK ENGINEERING & SYSTEMS MANAGEMENT</h6>
                         </div>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
@@ -213,7 +213,7 @@
                 <div class="col-sm-6">
                     <div class="skill-bar">
                         <div class="progress-lable">
-                            <h6>WordPress & Web Development</h6>
+                            <h6>WORDPRESS & WEB DEVELOPMENT</h6>
                         </div>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
@@ -225,7 +225,7 @@
                 <div class="col-sm-6">
                     <div class="skill-bar">
                         <div class="progress-lable">
-                            <h6>Buiesness Automation</h6>
+                            <h6>BUSINESS AUTOMATION</h6>
                         </div>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
