added price check app to  portfolio

--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
+                                <br />
+                                <small>MemTrack: Membership tracking for FBLA.</small>
                             </div>
                         </div>
                         <img src="img/portfolio/memtrack.png" class="img-responsive" alt="">
@@ -102,22 +104,27 @@
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
+                                <br />
+                                <small>Website to promote FBLA localy.</small>
                             </div>
                         </div>
                         <img src="img/portfolio/WoodinvilleFBLA.png" class="img-responsive" alt="">
                     </a>
                 </div>
-                <!--
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
+                                <br />
+                                <small>Compares client's prices to other stores.</small>
                             </div>
                         </div>
-                        <img src="img/portfolio/circus.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/pricecheck.png" class="img-responsive" alt="">
                     </a>
                 </div>
+
+                <!--
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -449,26 +456,26 @@
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
-                                <h2>Project Title</h2>
+                                <h2>Price Check</h2>
                                 <hr class="star-primary">
-                                <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
-                                <p>Use this area of the page to describe your project. The icon above is part of a free icon
-                                    set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you
-                                    can download their free set with 16 icons, or you can purchase the entire set with 146
-                                    icons for only $12!
+                                <img src="img/portfolio/pricecheck.png" class="img-responsive img-centered" alt="">
+                                <small class="photo-attribution">-Photo by <a href="https://www.flickr.com/photos/michaelrighi/">Michael Righi</a></small>
+                                <p>
+                                    With major online retail stores, the merchant with the lowest price wins the front page for that product. This client was
+                                    having trouble making sure his many products on this online store always was the first
+                                    listed.
+                                    <br />
+                                    <br /> I created a small application that took an excel file of all of his UPC codes
+                                    and their respective prices and notified the client if any of their prices were not the
+                                    most competitive. Allowing the client to guarantee their products showed up first on
+                                    this online store.
                                 </p>
                                 <ul class="list-inline item-details">
-                                    <li>Client:
-                                        <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                    </li>
                                     <li>Date:
-                                        <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
+                                        <strong>March 2017</strong>
                                     </li>
                                     <li>Service:
-                                        <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
+                                        <strong>Business Automation</strong>
                                     </li>
                                 </ul>
                                 <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
