--- a/index.html
+++ b/index.html
@@ -394,6 +394,9 @@
                                     <li>Date:
                                         <strong>2015</strong>
                                     </li>
+                                    <li>Service:
+                                        <strong>Software Development, Business Automation</strong>
+                                    </li>
                                 </ul>
                                 <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                             </div>
