away with the loading bars, added logo, fixed padmargin on carosel

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Maxwell Wenger</a>
+                <a class="navbar-brand" href="#page-top">
+                <img src="img/logo.png" /></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -197,7 +198,7 @@
                 </div>
             </div>
             <br />
-            <div class="row">
+            <!--<div class="row">
                 <div class="col-sm-6">
                     <div class="skill-bar">
                         <div class="progress-lable">
@@ -245,7 +246,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>-->
                 <div class="row">
                     <section class="center slider">
                         <div>
